[developing]: added - redis, auth endpoints, auth middleware, some project endpoints; fixed - swagger, migrations
