# docs/swagger.yaml
@@ -1,5 +1,15 @@
 basePath: /
 definitions:
+  app.LoginReqBody:
+    properties:
+      password:
+        type: string
+      username:
+        type: string
+    required:
+    - password
+    - username
+    type: object
   app.SignUpReqBody:
     properties:
       email:
@@ -8,6 +18,10 @@ definitions:
         type: string
       username:
         type: string
+    required:
+    - email
+    - password
+    - username
     type: object
   app.errorResponse:
     properties:
@@ -63,6 +77,10 @@ definitions:
         type: string
       title:
         type: string
+    required:
+    - color
+    - description
+    - title
     type: object
   ds.Section:
     properties:
@@ -91,7 +109,7 @@ definitions:
 host: 127.0.0.1:8080
 info:
   contact:
-    email: mkn-notifyer@mail.ru
+    email: mkn-notifyer@mail.ruv
     name: MKN Support
   description: Notification backend service.
   title: MKN API
@@ -146,6 +164,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/app.errorResponse'
+      security:
+      - BearerAuth: []
       summary: Add favorite project
       tags:
       - add
@@ -175,6 +195,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/app.errorResponse'
+      security:
+      - BearerAuth: []
       summary: Delete favorite project
       tags:
       - delete
@@ -231,6 +253,13 @@ paths:
   /login:
     post:
       description: Login user
+      parameters:
+      - description: User data
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/app.LoginReqBody'
       produces:
       - application/json
       responses:
@@ -263,21 +292,28 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/app.errorResponse'
+      security:
+      - BearerAuth: []
       summary: Logout user
       tags:
       - auth
   /project:
     post:
       description: Creates project
+      parameters:
+      - description: Project data
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/ds.Project'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            items:
-              $ref: '#/definitions/ds.Project'
-            type: array
+            $ref: '#/definitions/ds.Project'
         "403":
           description: Forbidden
           schema:
@@ -290,6 +326,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/app.errorResponse'
+      security:
+      - BearerAuth: []
       summary: Creates project
       tags:
       - add
@@ -787,6 +825,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/app.errorResponse'
+      security:
+      - BearerAuth: []
       summary: Gets all owned project
       tags:
       - info
@@ -860,4 +900,9 @@ paths:
       summary: Gets upcoming notifications
       tags:
       - info
+securityDefinitions:
+  BearerAuth:
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
